still some small issues, but we're squashing them!

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ a.icon {
 .sticky .title {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: flex-end;
   border-bottom: 1px solid black;
   margin: 0;
   font-weight: 400;
@@ -102,7 +102,7 @@ a.icon {
   box-shadow: 0px 0px 2px rgba(0,0,0,.5), 0px 5px 6px rgba(0,0,0,.25);
   border-radius: 5px;
   padding: .75rem 1rem;
-  width: calc(100% - 2.75rem);
+  width: calc(100% - 3.25rem);
   line-height: 1.5;
 }
 #aboutPop p {
